@@ -31,7 +31,7 @@ PROJECT_NAME           = wxShapeFramework
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = "1.9.1 beta"
+PROJECT_NUMBER         = "1.9.2 beta"
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
